gkeyfile: Fix FD validity test to be technically correct

The fd could be valid and zero.

https://bugzilla.gnome.org/show_bug.cgi?id=760324